--- a/Dockerfile.checker
+++ b/Dockerfile.checker
@@ -19,4 +19,4 @@ COPY pkg/checker/checker.yml /etc/moira/checker.yml
 
 COPY --from=builder /go/src/github.com/moira-alert/moira/build/checker /usr/bin/checker
 
-ENTRYPOINT ["/usr/bin/checker"]
+ENTRYPOINT ["/usr/bin/checker", "--use-env"]
